<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.clearent.interview</groupId>
  <artifactId>exercise</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>exercise</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <build>
    <plugins>
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-surefire-plugin</artifactId>
			<version>2.12.2</version>
			<configuration>
				<argLine>-Duser.language=en</argLine>
				<argLine>-Xmx1024m</argLine>
				<argLine>-XX:MaxPermSize=256m</argLine>
				<argLine>-Dfile.encoding=UTF-8</argLine>
				<useFile>false</useFile>
			</configuration>
		</plugin>
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-compiler-plugin</artifactId>
			<version>3.3</version>
			<configuration>
			  <source>1.7</source>
			  <target>1.7</target>
			</configuration>
		</plugin>
		<plugin>
		<groupId>org.codehaus.mojo</groupId>
		<artifactId>exec-maven-plugin</artifactId>
		<version>1.3.2</version>
		<executions>
		   <execution>
		     <phase>integration-test</phase>
		
		       <goals>
		           <goal>java</goal>
		       </goals>
		
		   </execution>
		</executions>
		<configuration>		
		         <classpathScope>test</classpathScope>
		         <mainClass>cucumber.api.cli.Main</mainClass>
		
		         <arguments>
		         	 <argument>--snippets</argument>
		         	 <argument>camelcase</argument>
		             <argument>--plugin</argument>
		             <argument>junit:target/output/cucumber-junit-report/allcukes.xml</argument>
		             <argument>--plugin</argument>
		             <argument>pretty</argument>
		             <argument>--plugin</argument>
		             <argument>html:target/output/cucumber-html-report</argument>
		             <argument>--plugin</argument>
		             <argument>json:target/output/cucumber_report.json</argument>
		
		             <argument>--glue</argument>
		             <argument>com.clearent.exercise</argument>
		             <argument>src/test/resources</argument>
		            </arguments>
		 </configuration>
		</plugin>		
    </plugins>
  </build>

  <dependencies>
    <dependency>
		<groupId>junit</groupId>
		<artifactId>junit</artifactId>
		<version>4.12</version>
		<scope>test</scope>
    </dependency>
	<dependency>
		<groupId>info.cukes</groupId>
		<artifactId>cucumber-junit</artifactId>
		<version>1.2.3</version>
		<scope>test</scope>
	</dependency>
	<dependency>
	    <groupId>info.cukes</groupId>
	    <artifactId>cucumber-java</artifactId>
	    <version>1.2.3</version>
	    <scope>test</scope>
	</dependency>
  </dependencies>
</project>
